[package]
authors = ["Nihal Pasham <nihal.pasham@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic I2C driver for Microchip's Crypto Authentication HW (i.e. secure element `ATECC608A`), written in pure Rust."
documentation = "https://docs.rs/Rusty_CryptoAuthLib"
edition = "2018"
homepage = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
keywords = ["ATECC608A", "Microchip-driver", "Security", "Crypto", "Authentication"]
license = "MIT OR Apache-2.0"
name = "Rusty_CryptoAuthLib"
readme = "README.md"
repository = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convertto-proc-macro = {path = "./convertto-proc-macro", version = "0.1.0"}
embedded-hal = "0.2.4"
heapless = "0.5.5"
nb = "1.0.0"
postcard = "0.5.0"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.114"

